htick 0.02
----------

----- cvs ci ------
Wed Jul 15  19:23:54
Georgi:
* bugfix in toss
* small change FileFix

Wed Jul 14  20:48:50
Georgi:
* bugfix if link is busy
* small change FileFix
* small bugfix in write file in files.bbs

Sun Jul 11  12:27:35
Georgi:
* small bugfix with recoding in posting announce and FileFix
* posting about new files in echoarea ("htick <toss | hatch> [announce <area>"])
+ "htick hatch ... [replace]" - fill replace field in TIC
+ support -h and -manual in area option

Mon Jul  5 22:39:33 NOVST 1999
max:
* small bugfix in recode.c

----- cvs ci ------
Thu Jul  1  15:30:55
Georgi:
* Fixed bug with seenby

Mon Jun 28  16:47:00
Fedor:
+ Added direct and immediate flavours

Sun Jun 27  15:26:00
Fedor:
* Fixed bug with BUSY flag
* Fixed bug with limiter / and \ in path
* Fixed bug with temporary directory when link is online (BUSY)
+ Added posting about autocreating filearea in netmail or echoarea (ReportTo)
+ Added posting about new files in netmail or echoarea (ReportTo)

Wed Jun 23  14:52:45
Georgi Fofanov (georgi@inem.uni.udm.ru):
* Many changes for "htick toss"
+ Added "htick hatch"
+ Added "htick filelist"
+ Added posting about new files in text file
+ Added posting about autocreating filearea in text file

Tue Jun 22 01:31:04 NOVST 1999
max:
- dirty hack for forward files
- fixed segfault if no ticPwd

Mon Jun 21 14:09:03 NOVST 1999                                                  
max:
+ add separate bundles code (for .tic files)
* areafixkillreports works for filefix reports now

Sun Jun 20  21:19:00
Fedor:
* change areafix.c

Tue May 11 19:13:26 CEST 1999 
mtt:
+ applied patch by Oleg to compile htick under os/2 with pgcc/emx
	
Thu Apr 29, 1999
Gabriel Plutzar:
 + Downlinks who get files are now added to the Seen By List

Sat Apr 24  
By Alex Erzin, checked in by Gabriel
 + files.bbs files supported
 + seenbys added
	
htick 0.01
(released on Wed Apr 21 18:44:22 CEST 1999)
----------

Sun Apr 11  17:00:00
Antonio: